@@ -43,7 +43,6 @@
 	<icqServer>login.icq.com</icqServer>
 
 	<!-- The port of the ICQ server you wish to connect to -->
-	<!--<icqPort>5238</icqPort> ... this seems to prevent buddy icons -->
 	<icqPort>5190</icqPort>
 
 	<!-- The name of Socks Proxy if connecting thru a proxy -->
